# black-hole-raytracer

./: .gitignore  CLAUDE.md  Cargo.toml  MoonZoon.toml  README.md  justfile  pyproject.toml
docs/: ROADMAP.md
frontend/: Cargo.toml
frontend/src/: app.rs  config.rs  home.rs  main.rs
frontend/src/shader/: shader.wgsl
measurements/: perf_log_baseline_20251207_235120.csv  perf_log_max_step_200_20251208_001624.csv
notebooks/: black_hole_rendering.ipynb
src/: compute.wgsl  display.wgsl  lib.rs  main.rs  ray_tracer_euler.wgsl  shader.wgsl
