[package]
name = "black-hole-raytracer"
version = "0.1.0"
edition = "2024"

[lib]
name = "black_hole_raytracer"
path = "src/lib.rs"

[[bin]]
name = "black-hole-raytracer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
env_logger = "0.11.8"
image = "0.25"
log = "0.4.28"
nalgebra = "0.34.1"
tokio = { version = "1", features = ["full"] }
wgpu = { version = "22", features = ["wgsl"] }
winit = { version = "0.30.12", features = ["default"] }

# GUI関連（オプショナル）
egui = { version = "0.29", optional = true }
egui-winit = { version = "0.29", optional = true }
egui-wgpu = { version = "0.29", optional = true }

[features]
default = ["gui"]
gui = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu"]
